core/tests/errors/private_declaration.rain
let main = fn() {
	contents = "let bar = 5"
	foo = internal._import(internal._create_file(contents, "foo.rain", false))
	foo.bar
}
